--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^8.8.0"
+  },
+  "dependencies": {
+    "axios": "^0.25.0",
+    "prompt-sync": "^4.2.0",
+    "prompt-sync-history": "^1.0.1",
+    "wait-for-user-input": "^1.0.0"
   }
 }
