--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "prompt-sync": "^4.2.0",
-    "prompt-sync-history": "^1.0.1",
-    "wait-for-user-input": "^1.0.0"
+    "prompt-sync": "^4.2.0"
   }
 }
